# p2p-project-cs4390

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.sh  test_input.txt
.github/workflows/: cmake-single-platform.yml
docs/: project-des-CS4390.docx  skeleton_peer.c  skeleton_tracker.c  skeleton_tracker.rtf
exec/: p2p-network-cs4390
final_p2p_project/: Readme.md
final_p2p_project/peer/: config.c  config.h  downloader.c  peer.c  peer.h  state.c  tracker_client.c
final_p2p_project/peer/peer_template/: serverThreadConfig.cfg
final_p2p_project/scripts/: clean_demo.sh  setup_peers.sh  starter.sh  stop_all.sh
final_p2p_project/tracker/: Makefile  protocol.c  protocol.h  sconfig  trackfile.h
midterm_p2p_project/: Makefile  README.txt  peer.c  peer.h  protocol.c  protocol.h  tracker  tracker.c  tracker.h
midterm_p2p_project/peer1/: serverThreadConfig.cfg
midterm_p2p_project/peer1/shared/: hello.txt
midterm_p2p_project/peer2/: clientThreadConfig.cfg  peer  serverThreadConfig.cfg
midterm_p2p_project/peer2/cache/: hello.txt.track
midterm_p2p_project/peer3/: serverThreadConfig.cfg
midterm_p2p_project/torrents/: hello.txt.track
p2p_final_project/: Makefile
p2p_final_project/peer/: Makefile  config.c  downloader.h  peer.h  peer_server.c  peer_server.h  protocol.c  protocol.h  state.h  tracker_client.c  tracker_client.h
p2p_final_project/peer/peer_template/: clientThreadConfig.cfg
p2p_final_project/scripts/: setup_peers.sh
p2p_final_project/tracker/: config.c  config.h  tracker.c  tracker.h  trackfile.c
peer/: CMakeLists.txt  PeerDocs.md  peer.c  peer.cfg  peer.cpp  peer.h  test.txt
platform/: CMakeLists.txt  api.h  linux_api.c
platform/linux/: CMakeLists.txt  linux_api.c  linux_api.h
protocol/: CMakeLists.txt  protocol.c  protocol.h
src/: main.cpp
tracker/: CMakeLists.txt  tracker.c  tracker.cpp  tracker.h
tracker/trk/: .gitignore
